# api-chats

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: d16067fc2cd8_.py
src/: database.py  main.py  models.py  schemas.py
src/api/: chats.py
